--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,13 @@
 @layer base {
     html{
         font-family: "Roboto", "sans-serif";
+        height: 100vh;
     }
 
     body{
         background-color: #fdfeff;
         overflow-x: hidden;
+        height: 100%
     }
 }
 
